--- a/test-client/index.html
+++ b/test-client/index.html
@@ -31,7 +31,7 @@
       <div class="input-line">
       <label for="url">URL:</label>
       <input type="text" name="url" id="url"
-             value="quic-transport://192.168.1.3:4433/counter">
+             value="quic-transport://localhost:4433/counter">
       <input type="button" id="connect" value="Connect" onclick="connect()">
       </div>
     </div>
