--- a/test-client/index.html
+++ b/test-client/index.html
@@ -32,7 +32,8 @@
                     <div class="input-line">
                         <label for="url">URL:</label>
                         <input type="text" name="url" id="url" value="quic-transport://localhost:4433/counter">
-                        <input type="button" id="connect" value="Connect"">
+                        <input type="button" id="connect" value="Connect">
+                        <button id="closecon" disabled>Disconnect</button>
                     </div>
                 </div>
                 <div>
